--- a/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
+++ b/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
@@ -57,16 +57,16 @@ At this point it is yet to be determined if the system will be based on a feedba
 \input{1Chapters/1Preanalysis/hit_detection.tex}
 
 \subsubsection{Plausible solution} 
-The Previous tests have shown that it is possible to use an accelerometer to estimate the performance of the system by looking at the harmonic distortions. However following up on all of the trails the problems are as follows:
+The Previous tests have shown that it is possible to use an microphone to estimate the performance of the system by looking at the harmonic distortions. However following up on all of the trials the problems are as follows:
 \begin{itemize}
 \item Estimating harmonic distortions introduced in a system when playing music, are only well-defined for periodic sinusoids.
-\item Frequency response of vibration, using the cheaper accelerometer, on the driver and cabinet hardly changes when exposed for loud playback, thus it will be hard to get usable outputs of the sensors.
+\item Frequency response of vibration, using the cheaper accelerometer, on the driver and cabinet hardly changes when exposed for loud playback, thus it will be hard to get usable output from the sensors.
 \item The price for usable sensor equipment is too high compared to the application it is targeted for. 
-\item The sensors did not directly show a pattern for when a possible hit of the back plate were about to occur.
+\item The sensors did not directly show a pattern for when a possible hit of the backplate were about to occur.
 \item The phase of the signal can not assumed "in phase" and it is therefore not possible to apply spectral estimations for detecting specific frequency peaks. e.g. if using a specific frequency as target for attenuation a 180 degrees phase shifted signal might bring false negatives. 
 \end{itemize}
 
-It can therefore be concluded that developing a system based on measurements from a accelerometer might turn out to be too complex to be realized in time due to time constraints. The system to be designed will therefore be based on a feedforward system. The concept of a feedforward system which fulfill the problem statement is shown in \autoref{fig:Concept}.
+It can therefore be concluded that developing a system based on measurements from an accelerometer or microphone is to complex to be realized in time due to time constraints. The system to be designed will therefore be based on a feedforward system. The concept of a feedforward system is shown in \autoref{fig:Concept}.
 
 \begin{figure}[H]
 \centering
@@ -77,6 +77,6 @@ It can therefore be concluded that developing a system based on measurements fro
 \label{fig:Concept}
 \end{figure}
 
-Since the system will be controlled using a feedforward system which should be able to analyze, process and correct signals before the music is played. It gives rise to questioning what kind of platform should be used and what kind of requirements are needed for such a system. On the market there are different plausible platforms which meets with the demands all with different advantages and disadvantages. The preceding section will cover the determination of which platform that will function best in a active loudspeaker system . 
+A feedforward system which should be able to analyze, process and correct signals before the music is outputtet. It gives rise to questioning what kind of platform should be used and what kind of requirements are needed for such a system. On the market there are different plausible platforms which meets with the demands all with different advantages and disadvantages. The preceding section will cover the determination of which platform will function best in a active loudspeaker protection system. 
 
 %\textbf{The design concept consist of a signal processing block, which will be analysed to understand which solution is best for the problem stated. A signal analysis block which will not be analysed further in this chapter, a user interface which will be analysed to determine how the user interface should be designed and lastly the processor block which will be analysed to determine which type of processor that should be used.}
