--- a/Rapport/1Chapters/2Concept/signalProcessingConclusion.tex
+++ b/Rapport/1Chapters/2Concept/signalProcessingConclusion.tex
@@ -1,9 +1,9 @@
 \section{Signal Processing Tools Conclusion}
 This section will conclude on which methods for signal analysis and processing should be used for the system to optimally protect the loudspeaker according to \autoref{sec:problem_statement} building onto \autoref{fig:speaker_block2}.
 
-The following methods for analysing and processing signals have been examined:
+The following methods for analyzing and processing signals have been examined:
 \begin{itemize}
-\item Analysing
+\item Analyzing
 \begin{itemize}
 \item RMS
 \item Peak
@@ -12,18 +12,18 @@ The following methods for analysing and processing signals have been examined:
 \end{itemize}
 \item Processing
 \begin{itemize}
-\item Compressor
+\item DGC
 \item Equalizer
 \item Processing in freuqency domain
 \end{itemize}
 \item Multirate
 \end{itemize}
 
-The optimal way of determing how much the diapragm moves is by measuring the RMS value of a signal and not the peak value, because the peak value does not give any information of the power which RMS does. In effect this means that a high peak value could result in a small movement in the diapragm while a high RMS value will always result in a large movement in the diapraghm. This is because a peak value could just be a single sample while the RMS is the average over a time interval. 
+A optimal way of determing how much the diaphragm moves, based on the analyzis, is by measuring the RMS value of a signal and not the peak value, because the peak value does not give any information of the power which RMS does. In effect this means that a high peak value could result in a small movement in the diaphragm, while a high RMS value will always result in a large movement in the diaphragm. This is because a peak value might be a single sample while the RMS is the average over a time interval. 
 
-500 Hz are selected as the determined problem area in, it is based on subjective analysis of the trails in Appendix \autoref{app:journal_speaker_test} and cooperation with DALI\footnote{\scalebox{0.7}{\path{CD://MAIL/DALIUpdate.pdf}}}. This is because its only large RMS values in 500 Hz and below which could result in the coil hitting the backplate the analyzed signals spectrum should be 500 Hz and below, which can either be done with a spectrum analyzer or a FFT. The method choosen to analyse the signal spectrum is the spectrum analyzer, because it is firstly faster computational wise because no transformation is necessary, secondly because the information wanted is the RMS value of the band and not a specific frequency which sorts out the FFT.   %This spectrum analyzer should meet the standard IEC 61260 relating to octave-band and fractional-octave-band filters. 
+500 Hz are selected as the determined problem area, it is based on subjective analysis of the trials in \autoref{app:journal_speaker_test} and cooperation with DALI\footnote{\scalebox{0.7}{\path{CD://MAIL/DALIUpdate.pdf}}}. This is because its only large RMS values in 500 Hz and below which could result in the coil hitting the backplate. The analyzed signal spectrum should be 500 Hz and below, which can either be done with a spectrum analyzer or an FFT. The method choosen to analyze the signal spectrum is the spectrum analyzer, because it is firstly faster computational wise because no transformation is necessary, secondly because the information wanted is the RMS value of the band and not a specific frequency which sorts out the FFT.   %This spectrum analyzer should meet the standard IEC 61260 relating to octave-band and fractional-octave-band filters. 
 
-For attenuating the signal both a compressor or an equalizer could be used. The method choosen is the compressor because of the spectrum analyzer. The spectrum analyzer divides the signal into the correct band/bands so there is no need for an equalizer. If the FFT had been choosen as the analyser of the signal spectrum the equalizer processed in the frequency domain would have been optimally, because the transform from time to frequency is given because of the needed FFT. 
+For attenuating the signal both a limiter or an equalizer could be used. The method choosen is the limiter because of the spectrum analyzer. The spectrum analyzer divides the signal into the correct band/bands so there is no need for an equalizer. If the FFT had been choosen as the analyser of the signal spectrum the equalizer processed in the frequency domain would have been optimal, because the transform from time to frequency is given because of the chosen FFT. 
 
 The use of multirate should be considered if computation time is a problem in the system.
 
