--- a/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
+++ b/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
@@ -30,7 +30,7 @@ There are many different approaches in analysing the measured data, and the appr
 
 %\vspace{3mm}
 
-During the first accelerometer measurements the loudspeaker acts linear with very little fluctuations. The frequency response keeps being steadily the same with an increase in amplitude which was expected. In \autoref{fig:Driver1} the first accelerometer measurement on the driver is seen. At 25 seconds a mechanical resonance frequency. 
+During the first accelerometer measurements the loudspeaker acts linear with very little fluctuations. The frequency response keeps being steadily the same with an increase in amplitude which was expected. In \autoref{fig:Driver1} the first accelerometer measurement is shown, played using 0.005 watt at XX dB SPL, on the driver is seen. The figure shows the enclosures resonance frequency at approximatly 13 seconds and at 25 seconds the drivers mechanical resonance frequency appears. This pattern continues for approximatly 15 measurements. 
 
 %\todo{Billede af reference tids figur og forklaring af resonans frekvens} %A tendency shows that the 3rd harmonic increases more rapidly than the 2nd harmonic, again as expected for the performance of a loudspeaker.
 
