--- a/Rapport/00setup/mybib.bib
+++ b/Rapport/00setup/mybib.bib
@@ -80,4 +80,20 @@
   year = {2016},
 }
 
+@MISC{sou:daliZensor5,
+  title = {DALI Zensor 5 AX.)},
+  author = {DALI},
+  note = {Downloaded May 23, 2016},
+  howpublished = {\url{http://www.dali-speakers.com/loudspeakers/zensor/zensor-5-ax/}},
+  year = {2016},
+}
+
+
+
+
+
+
+
+
+
 
