--- a/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
+++ b/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
@@ -4,7 +4,7 @@ In order to determine whether or not it is possible to use sensory equipment to 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.5\textwidth]{figures/zensor5.png}
-\caption{DALI Zensor 5.}
+\caption{DALI Zensor 5 \citep{sou:daliZensor5}.}
 \label{fig:dali_zensor5}
 \end{figure}
 
