--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -21,7 +21,7 @@ An example of an active loudspeaker is the DALI Zensor 5 AX seen in \autoref{fig
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.6\textwidth]{figures/dali_zensor_1_ax.jpg}
-\caption{DALI Zensor 5 AX.}
+\caption{DALI Zensor 5 AX  \citep{sou:daliZensor5}.}
 \label{fig:dali_zensor_ax}
 \end{figure}
 The DALI Zensor 5 AX allows connection of the audio source via cable or via Bluetooth which enables the user to control the loudspeaker wirelessly, which makes it flexible to use. In the following sections, each block in \autoref{fig:speaker_block} namely "Signal processor", "Amplifier", and "Drivers" will be analysed. The analysis will focus on the basics of the block and how distortion can arise in the respective block.
