--- a/Rapport/1Chapters/1Preanalysis/hit_detection.tex
+++ b/Rapport/1Chapters/1Preanalysis/hit_detection.tex
@@ -44,9 +44,9 @@ Concluding on the test it shows that it is possible to measure vibration and hit
 
 \subsubsection{Accelerometer trials}
 
-From \autoref{app:journal_speaker_test2} further trials were deducted to determine whether a less precise accelerometer could measure the same output. The test setup was the same as previous test but with single tone sinusoids instead of a frequency sweep. This is done, because harmonic distortion is easier to reveal for single tones. %The behaviour of the speaker was identical with the preceding trials. 
+From \autoref{app:journal_speaker_test2} further trials were deducted to determine whether SparkFun accelerometer could measure the same output as B\&K accelerometers . The test setup was the same as previous test but with single tone sinusoids instead of a frequency sweep and with SparkFun accelerometers. This is done, because harmonic distortion is easier to reveal for single tones. %The behaviour of the speaker was identical with the preceding trials. 
 
-The trials could be concluded with the less precise accelerometers not being able to properly detect the vibrations of the driver. There were to many fluctuations in the measurements leading to disbelief in the accelerometer being accurately enough, however from the measurements a pattern from the microphone measurements could be derived. Since the speaker behaved linearly when the gain of the amplifier was increased it was possible to compare the fundamental tone with the third harmonic tone and establish the correlation showed in \autoref{fig:com_mic13All_repport}.
+The trials could be concluded with the SparkFun accelerometers not being able to properly detect the vibrations of the driver. There were to many fluctuations in the measurements leading to disbelief in the accelerometer being accurately enough, however from the measurements a pattern from the microphone measurements could be derived. Since the speaker behaved linearly when the gain of the amplifier was increased it was possible to compare the fundamental tone with the third harmonic tone and establish the correlation showed in \autoref{fig:com_mic13All_repport}.
 
 \begin{figure}[H]
     \centering
