--- a/Rapport/2Appendix/AcceptNoise.tex
+++ b/Rapport/2Appendix/AcceptNoise.tex
@@ -56,7 +56,7 @@ The procedure for this experiment is described as follows:
 \section{Data Extraction}
 The raw dat for the Bypass can be found at the CD \todo[inline]{CD}
 The raw dat for the Full system can be found at the CD \todo[inline]{CD}
-There are 30 bands from 20 Hz to 20 kHz, see \autoref{tb:freqBands}, where a magnitude is given in dB for each band. 10 different measurements have been taken for both bypass and the full system. The mean and standard deviation (std) have been found for each band as has been plotted. The two bands 25 Hz and 20000 Hz has been removed from the plots because of large deviation and therefore not deemed usefull.
+There are 30 bands from 20 Hz to 20 kHz, see \autoref{tb:freqBandsAppendix}, where a magnitude is given in dB for each band. 10 different measurements have been taken for both bypass and the full system. The mean and standard deviation (std) have been found for each band as has been plotted. The two bands 25 Hz and 20000 Hz has been removed from the plots because of large deviation and therefore not deemed usefull.
 
 \begin{table}[H]
 \centering
@@ -68,7 +68,7 @@ There are 30 bands from 20 Hz to 20 kHz, see \autoref{tb:freqBands}, where a mag
 2500 & 3150 & 4000 & 5000 & 6300 & 8000 & 10000 & 12500 & 16000 & 20000 \\ \hline
 \end{tabular}
 \caption{Frequency bands.}
-\label{tb:freqBands}
+\label{tb:freqBandsAppendix}
 \end{table}
 
 \section{Analysis}
